Added sign up and lost password components.

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -24,27 +24,16 @@
         <br />
         <div fxLayout="column">
           <mat-form-field>
-            <input
-              type="text"
-              matInput
-              formControlName="username"
-              autocomplete="username"
-              [placeholder]="'Username' | translate"
-            />
-            <mat-error *ngIf="loginForm.controls.username.valid || loginForm.controls.username.untouched">
+            <input type="text" matInput formControlName="username" autocomplete="username"
+              [placeholder]="'Username' | translate" required />
+            <mat-error *ngIf="loginForm.get('username').hasError('required')">
               <span translate>Username is required</span>
             </mat-error>
           </mat-form-field>
           <mat-form-field>
-            <input
-              type="password"
-              matInput
-              formControlName="password"
-              autocomplete="current-password"
-              [placeholder]="'Password' | translate"
-              required
-            />
-            <mat-error *ngIf="loginForm.controls.password.valid || loginForm.controls.password.untouched">
+            <input type="password" matInput formControlName="password" autocomplete="current-password"
+              [placeholder]="'Password' | translate" required />
+            <mat-error *ngIf="loginForm.get('password').hasError('required')">
               <span translate>Password is required</span>
             </mat-error>
           </mat-form-field>
@@ -56,6 +45,13 @@
           </button>
         </div>
       </form>
+      <br />
+      <button mat-raised-button color="primary" routerLink="/sign-up">
+        <span translate>Create an account</span>
+      </button>
+      <button mat-raised-button color="primary" routerLink="/lost-password">
+        <span translate>Lost password?</span>
+      </button>
     </mat-card>
   </div>
 </div>
