--- a/src/app/login/lost-password/lost-password.component.html
+++ b/src/app/login/lost-password/lost-password.component.html
@@ -11,8 +11,14 @@
         <br />
         <div fxLayout="column">
           <mat-form-field>
-            <input type="text" matInput formControlName="username" autocomplete="username"
-              [placeholder]="'Username' | translate" required />
+            <input
+              type="text"
+              matInput
+              formControlName="username"
+              autocomplete="username"
+              [placeholder]="'Username' | translate"
+              required
+            />
             <mat-error *ngIf="lostPasswordForm.get('username').hasError('required')">
               <span translate>Username is required</span>
             </mat-error>
