--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,69 +1,71 @@
 <div fxFill fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="1.5rem" class="mat-typography">
-  <div>
-    <h1 fxLayoutAlign="center" translate>APP_NAME</h1>
-    <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="2rem">
-      <h4 class="version">v{{ version }}</h4>
-      <div class="language-selector">
-        <button mat-raised-button color="primary" [matMenuTriggerFor]="languageMenu">
-          {{ currentLanguage }}
-        </button>
-        <mat-menu #languageMenu="matMenu">
-          <button mat-menu-item *ngFor="let language of languages" (click)="setLanguage(language)">
-            {{ language }}
-          </button>
-        </mat-menu>
-      </div>
+    <div>
+        <h1 fxLayoutAlign="center" translate>APP_NAME</h1>
+        <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="2rem">
+            <h4 class="version">v{{ version }}</h4>
+            <div class="language-selector">
+                <button mat-raised-button color="primary" [matMenuTriggerFor]="languageMenu">
+                    {{ currentLanguage }}
+                </button>
+                <mat-menu #languageMenu="matMenu">
+                    <button mat-menu-item *ngFor="let language of languages" (click)="setLanguage(language)">
+                        {{ language }}
+                    </button>
+                </mat-menu>
+            </div>
+        </div>
     </div>
-  </div>
-  <div class="login-container" fxLayout="row" fxLayoutAlign="center">
-    <mat-card fxFlex="90%" fxFlex.sm="66%" fxFlex.md="50%" fxFlex.gt-md="33%" class="login-box">
-      <form (ngSubmit)="login()" [formGroup]="loginForm" novalidate>
-        <div class="login-error" [hidden]="!error || isLoading" translate>
-          Username or password incorrect.
-        </div>
-        <br />
-        <div fxLayout="column">
-          <mat-form-field>
-            <input
-              type="text"
-              matInput
-              formControlName="username"
-              autocomplete="username"
-              [placeholder]="'Username' | translate"
-              required
-            />
-            <mat-error *ngIf="loginForm.get('username').hasError('required')">
-              <span translate>Username is required</span>
-            </mat-error>
-          </mat-form-field>
-          <mat-form-field>
-            <input
-              type="password"
-              matInput
-              formControlName="password"
-              autocomplete="current-password"
-              [placeholder]="'Password' | translate"
-              required
-            />
-            <mat-error *ngIf="loginForm.get('password').hasError('required')">
-              <span translate>Password is required</span>
-            </mat-error>
-          </mat-form-field>
-          <mat-slide-toggle color="primary" formControlName="remember" translate>Remember me</mat-slide-toggle>
-          <br />
-          <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid || isLoading">
-            <app-loader class="inline-loader" [isLoading]="isLoading"></app-loader>
-            <span translate>Login</span>
-          </button>
-        </div>
-      </form>
-      <br />
-      <button mat-raised-button color="primary" routerLink="/sign-up">
-        <span translate>Create an account</span>
-      </button>
-      <button mat-raised-button color="primary" routerLink="/lost-password">
-        <span translate>Lost password?</span>
-      </button>
-    </mat-card>
-  </div>
+    <div class="login-container" fxLayout="row" fxLayoutAlign="center">
+        <mat-card fxFlex="90%" fxFlex.sm="66%" fxFlex.md="50%" fxFlex.gt-md="33%" class="login-box">
+            <form (ngSubmit)="login()" [formGroup]="loginForm" novalidate>
+                <div class="login-error" [hidden]="!error || isLoading" translate>
+                    Username or password incorrect.
+                </div>
+                <br />
+                <div fxLayout="column">
+                    <mat-form-field>
+                        <input
+                            type="text"
+                            matInput
+                            formControlName="username"
+                            autocomplete="username"
+                            [placeholder]="'Username' | translate"
+                            required
+                        />
+                        <mat-error *ngIf="loginForm.get('username').hasError('required')">
+                            <span translate>Username is required</span>
+                        </mat-error>
+                    </mat-form-field>
+                    <mat-form-field>
+                        <input
+                            type="password"
+                            matInput
+                            formControlName="password"
+                            autocomplete="current-password"
+                            [placeholder]="'Password' | translate"
+                            required
+                        />
+                        <mat-error *ngIf="loginForm.get('password').hasError('required')">
+                            <span translate>Password is required</span>
+                        </mat-error>
+                    </mat-form-field>
+                    <mat-slide-toggle color="primary" formControlName="remember" translate
+                        >Remember me</mat-slide-toggle
+                    >
+                    <br />
+                    <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid || isLoading">
+                        <app-loader class="inline-loader" [isLoading]="isLoading"></app-loader>
+                        <span translate>Login</span>
+                    </button>
+                </div>
+            </form>
+            <br />
+            <button mat-raised-button color="primary" routerLink="/sign-up">
+                <span translate>Create an account</span>
+            </button>
+            <button mat-raised-button color="primary" routerLink="/lost-password">
+                <span translate>Lost password?</span>
+            </button>
+        </mat-card>
+    </div>
 </div>
