--- a/src/app/login/lost-password/lost-password.component.html
+++ b/src/app/login/lost-password/lost-password.component.html
@@ -11,25 +11,15 @@
                 <br />
                 <div fxLayout="column">
                     <mat-form-field>
-                        <input
-                            type="text"
-                            matInput
-                            formControlName="username"
-                            autocomplete="username"
-                            [placeholder]="'Username' | translate"
-                            required
-                        />
+                        <input type="text" matInput formControlName="username" autocomplete="username"
+                            [placeholder]="'Username' | translate" required />
                         <mat-error *ngIf="lostPasswordForm.get('username').hasError('required')">
                             <span translate>Username is required</span>
                         </mat-error>
                     </mat-form-field>
                     <br />
-                    <button
-                        mat-raised-button
-                        color="primary"
-                        type="submit"
-                        [disabled]="lostPasswordForm.invalid || isLoading"
-                    >
+                    <button mat-raised-button color="primary" type="submit"
+                        [disabled]="lostPasswordForm.invalid || isLoading">
                         <app-loader class="inline-loader" [isLoading]="isLoading"></app-loader>
                         <span translate>Submit</span>
                     </button>
