--- a/src/app/login/lost-password/lost-password.component.html
+++ b/src/app/login/lost-password/lost-password.component.html
@@ -1,27 +1,27 @@
 <div fxFill fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="1.5rem" class="mat-typography">
     <div>
-        <h1 fxLayoutAlign="center" translate>Renew Password</h1>
+        <h1 fxLayoutAlign="center">Renew Password</h1>
     </div>
     <div class="lost-password-container" fxLayout="row" fxLayoutAlign="center">
         <mat-card fxFlex="90%" fxFlex.sm="66%" fxFlex.md="50%" fxFlex.gt-md="33%" class="lost-password-box">
             <form (ngSubmit)="renewPassword()" [formGroup]="lostPasswordForm" novalidate>
-                <div class="lost-password-error" [hidden]="!error || isLoading" translate>
+                <div class="lost-password-error" [hidden]="!error || isLoading">
                     Username incorrect.
                 </div>
                 <br />
                 <div fxLayout="column">
                     <mat-form-field>
                         <input type="text" matInput formControlName="username" autocomplete="username"
-                            [placeholder]="'Username' | translate" required />
+                            placeholder="Username" required />
                         <mat-error *ngIf="lostPasswordForm.get('username').hasError('required')">
-                            <span translate>Username is required</span>
+                            <span>Username is required</span>
                         </mat-error>
                     </mat-form-field>
                     <br />
                     <button mat-raised-button color="primary" type="submit"
                         [disabled]="lostPasswordForm.invalid || isLoading">
                         <app-loader class="inline-loader" [isLoading]="isLoading"></app-loader>
-                        <span translate>Submit</span>
+                        <span>Submit</span>
                     </button>
                 </div>
             </form>
