--- a/src/app/shell/shell.component.html
+++ b/src/app/shell/shell.component.html
@@ -5,11 +5,11 @@
                 <mat-list>
                     <mat-divider></mat-divider>
                     <a mat-list-item routerLink="/home" routerLinkActive="active" (click)="sidenav.close()">
-                        <span translate>Home</span>
+                        <span>Home</span>
                     </a>
                     <mat-divider></mat-divider>
                     <a mat-list-item routerLink="/about" routerLinkActive="active" (click)="sidenav.close()">
-                        <span translate>About</span>
+                        <span>About</span>
                     </a>
                     <mat-divider></mat-divider>
                 </mat-list>
