--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
             <img class="logo" src="assets/ngx-rocket-logo.png" alt="angular logo" />
         </p>
         <mat-card-content>
-            <mat-card-title translate>Hello world !</mat-card-title>
+            <mat-card-title>Hello world!</mat-card-title>
             <mat-card-subtitle>
                 <app-loader [isLoading]="isLoading" size="1.5"></app-loader>
                 <q [hidden]="isLoading">{{ quote }}</q>
