--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,48 +1,38 @@
 <div fxFill fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="1.5rem" class="mat-typography">
     <div>
-        <h1 fxLayoutAlign="center" translate>APP_NAME</h1>
+        <h1 fxLayoutAlign="center">APP_NAME</h1>
         <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="2rem">
             <h4 class="version">v{{ version }}</h4>
-            <div class="language-selector">
-                <button mat-raised-button color="primary" [matMenuTriggerFor]="languageMenu">
-                    {{ currentLanguage }}
-                </button>
-                <mat-menu #languageMenu="matMenu">
-                    <button mat-menu-item *ngFor="let language of languages" (click)="setLanguage(language)">
-                        {{ language }}
-                    </button>
-                </mat-menu>
-            </div>
         </div>
     </div>
     <div class="login-container" fxLayout="row" fxLayoutAlign="center">
         <mat-card fxFlex="90%" fxFlex.sm="66%" fxFlex.md="50%" fxFlex.gt-md="33%" class="login-box">
             <form (ngSubmit)="login()" [formGroup]="loginForm" novalidate>
-                <div class="login-error" [hidden]="!error || isLoading" translate>
+                <div class="login-error" [hidden]="!error || isLoading">
                     Username or password incorrect.
                 </div>
                 <br />
                 <div fxLayout="column">
                     <mat-form-field>
                         <input type="text" matInput formControlName="username" autocomplete="username"
-                            [placeholder]="'Username' | translate" required />
+                            placeholder="Username" required />
                         <mat-error *ngIf="loginForm.get('username').hasError('required')">
-                            <span translate>Username is required</span>
+                            <span>Username is required</span>
                         </mat-error>
                     </mat-form-field>
                     <mat-form-field>
                         <input type="password" matInput formControlName="password" autocomplete="current-password"
-                            [placeholder]="'Password' | translate" required />
+                            placeholder="Password" required />
                         <mat-error *ngIf="loginForm.get('password').hasError('required')">
-                            <span translate>Password is required</span>
+                            <span>Password is required</span>
                         </mat-error>
                     </mat-form-field>
-                    <mat-slide-toggle color="primary" formControlName="remember" translate>Remember me
+                    <mat-slide-toggle color="primary" formControlName="remember">Remember me
                     </mat-slide-toggle>
                     <br />
                     <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid || isLoading">
                         <app-loader class="inline-loader" [isLoading]="isLoading"></app-loader>
-                        <span translate>Login</span>
+                        <span>Login</span>
                     </button>
                 </div>
             </form>
@@ -52,7 +42,7 @@
             <div fxLayout="column">
                 <span>Don't have an account yet?
                     <button mat-stroked-button color="primary" routerLink="/sign-up">
-                        <span translate>Sign Up</span>
+                        <span>Sign Up</span>
                     </button>
                 </span>
             </div>
@@ -60,7 +50,7 @@
             <div fxLayout="column">
                 <span>Having trouble loggin in?
                     <button mat-stroked-button color="primary" routerLink="/reset-password">
-                        <span translate>Reset password</span>
+                        <span>Reset password</span>
                     </button>
                 </span>
             </div>
