--- a/src/app/login/sign-up/sign-up.component.html
+++ b/src/app/login/sign-up/sign-up.component.html
@@ -1,57 +1,55 @@
 <div fxFill fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="1.5rem" class="mat-typography">
     <div>
-        <h1 fxLayoutAlign="center" translate>Sign Up</h1>
+        <h1 fxLayoutAlign="center">Sign Up</h1>
     </div>
     <div class="sign-up-container" fxLayout="row" fxLayoutAlign="center">
         <mat-card fxFlex="90%" fxFlex.sm="66%" fxFlex.md="50%" fxFlex.gt-md="33%" class="sign-up-box">
             <form (ngSubmit)="signUp()" [formGroup]="signUpForm" novalidate>
-                <div class="sign-up-error" [hidden]="!error || isLoading" translate>
+                <div class="sign-up-error" [hidden]="!error || isLoading">
                     Username or password incorrect.
                 </div>
                 <br />
                 <div fxLayout="column">
                     <mat-form-field>
-                        <input type="email" matInput formControlName="email" [placeholder]="'Email' | translate"
-                            required />
+                        <input type="email" matInput formControlName="email" placeholder="Email" required />
                         <mat-error *ngIf="signUpForm.get('email').hasError('required')">
-                            <span translate>Email is required</span>
+                            <span>Email is required</span>
                         </mat-error>
                         <mat-error *ngIf="signUpForm.get('email').hasError('email')">
-                            <span translate>Not a valid email</span>
+                            <span>Not a valid email</span>
                         </mat-error>
                     </mat-form-field>
                     <mat-form-field>
-                        <input type="text" matInput formControlName="username" [placeholder]="'Username' | translate"
-                            required />
+                        <input type="text" matInput formControlName="username" placeholder="Username" required />
                         <mat-error *ngIf="signUpForm.get('username').hasError('required')">
-                            <span translate>Username is required</span>
+                            <span>Username is required</span>
                         </mat-error>
                     </mat-form-field>
                     <mat-form-field>
-                        <input type="password" matInput formControlName="password"
-                            [placeholder]="'Password' | translate" required minlength="10" />
+                        <input type="password" matInput formControlName="password" placeholder="Password" required
+                            minlength="10" />
                         <mat-error *ngIf="signUpForm.get('password').hasError('required')">
-                            <span translate>Password is required</span>
+                            <span>Password is required</span>
                         </mat-error>
                         <mat-error *ngIf="signUpForm.get('password').hasError('minlength')">
-                            <span translate>Password must be at least 10 characters long</span>
+                            <span>Password must be at least 10 characters long</span>
                         </mat-error>
                     </mat-form-field>
                     <mat-form-field>
-                        <input type="password" matInput formControlName="confirmPassword"
-                            [placeholder]="'Confirm password' | translate" required />
+                        <input type="password" matInput formControlName="confirmPassword" placeholder="Confirm password"
+                            required />
                         <mat-error *ngIf="signUpForm.get('confirmPassword').hasError('required')">
-                            <span translate>Password confirmation is required</span>
+                            <span>Password confirmation is required</span>
                         </mat-error>
                         <mat-error *ngIf="signUpForm.get('confirmPassword').hasError('matching')">
-                            <span translate>Confirmation does not match</span>
+                            <span>Confirmation does not match</span>
                         </mat-error>
                     </mat-form-field>
                     <br />
                     <button mat-raised-button color="primary" type="submit"
                         [disabled]="signUpForm.invalid || isLoading">
                         <app-loader class="inline-loader" [isLoading]="isLoading"></app-loader>
-                        <span translate>Sign Up</span>
+                        <span>Sign Up</span>
                     </button>
                 </div>
             </form>
