--- a/src/app/shell/header/header.component.html
+++ b/src/app/shell/header/header.component.html
@@ -6,35 +6,27 @@
         <span class="title">{{ title }}</span>
     </div>
     <div fxHide.lt-md>
-        <a class="brand" href="https://github.com/ngx-rocket" translate>APP_NAME</a>
+        <a class="brand" href="https://github.com/ngx-rocket">APP_NAME</a>
         <button mat-button routerLink="/home" routerLinkActive="active">
             <mat-icon>home</mat-icon>
-            <span translate>Home</span>
+            <span>Home</span>
         </button>
         <button mat-button routerLink="/about" routerLinkActive="active">
             <mat-icon>info</mat-icon>
-            <span translate>About</span>
+            <span>About</span>
         </button>
     </div>
     <span fxFlex></span>
-    <button mat-icon-button [matMenuTriggerFor]="languageMenu">
-        <mat-icon>language</mat-icon>
-    </button>
-    <mat-menu #languageMenu="matMenu">
-        <button mat-menu-item *ngFor="let language of languages" (click)="setLanguage(language)">
-            {{ language }}
-        </button>
-    </mat-menu>
     <button mat-icon-button [matMenuTriggerFor]="userMenu">
         <mat-icon>person</mat-icon>
     </button>
     <mat-menu #userMenu="matMenu">
         <mat-list>
             <mat-list-item>
-                <span translate>Logged in as</span>&nbsp;<b>{{ username }}</b>
+                <span>Logged in as</span>&nbsp;<b>{{ username }}</b>
             </mat-list-item>
             <mat-divider></mat-divider>
         </mat-list>
-        <button mat-menu-item (click)="logout()" translate>Logout</button>
+        <button mat-menu-item (click)="logout()">Logout</button>
     </mat-menu>
 </mat-toolbar>
