--- a/src/app/login/lost-password/lost-password.component.scss
+++ b/src/app/login/lost-password/lost-password.component.scss
@@ -15,6 +15,10 @@
     width: 100%;
 }
 
+.lost-password-container {
+    margin: 1.5rem 0;
+}
+
 .lost-password-error {
     color: mat-color($app-warn);
 }
