--- a/src/app/shell/shell.component.html
+++ b/src/app/shell/shell.component.html
@@ -1,19 +1,15 @@
 <div fxFlex>
     <mat-sidenav-container fxFill>
         <mat-sidenav #sidenav mode="over" ngClass.gt-sm="has-border">
-            <nav>
-                <mat-list>
-                    <mat-divider></mat-divider>
-                    <a mat-list-item routerLink="/home" routerLinkActive="active" (click)="sidenav.close()">
-                        <span>Home</span>
-                    </a>
-                    <mat-divider></mat-divider>
-                    <a mat-list-item routerLink="/about" routerLinkActive="active" (click)="sidenav.close()">
-                        <span>About</span>
-                    </a>
-                    <mat-divider></mat-divider>
-                </mat-list>
-            </nav>
+            <mat-list>
+                <a mat-list-item routerLink="/" routerLinkActive="active" (click)="sidenav.close()">
+                    <span>Home</span>
+                </a>
+                <mat-divider></mat-divider>
+                <a mat-list-item routerLink="/about" routerLinkActive="active" (click)="sidenav.close()">
+                    <span>About</span>
+                </a>
+            </mat-list>
         </mat-sidenav>
         <mat-sidenav-content>
             <app-header [sidenav]="sidenav"></app-header>
